// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`view matches snapshot when locations greater than 0 1`] = `
<div>
  <Component
    message="common.navigation.confirm"
    when={false}
  />
  <Commands
    formState={
      [
        {
          "dirty": false,
          "repositoryLocationSettings": [
            {
              "repositoryLocationType": "PUBLIC",
              "value": "",
            },
            {
              "repositoryLocationType": "CONFIGURABLE",
              "value": "d:/",
            },
          ],
          "repositoryLocationSettingsErrors": {},
        },
        {
          "setDirtyFlag": [Function],
          "setRepositoryLocationSettings": [Function],
          "setRepositoryLocationSettingsErrors": [Function],
        },
      ]
    }
  />
  <div>
    <ModelRepositoryInstruction />
    <ModelRepositoryLocationList
      formState={
        [
          {
            "dirty": false,
            "repositoryLocationSettings": [
              {
                "repositoryLocationType": "PUBLIC",
                "value": "",
              },
              {
                "repositoryLocationType": "CONFIGURABLE",
                "value": "d:/",
              },
            ],
            "repositoryLocationSettingsErrors": {},
          },
          {
            "setDirtyFlag": [Function],
            "setRepositoryLocationSettings": [Function],
            "setRepositoryLocationSettingsErrors": [Function],
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`view matches snapshot when no locations 1`] = `
<div>
  <Component
    message="common.navigation.confirm"
    when={false}
  />
  <Commands
    formState={
      [
        {
          "dirty": false,
          "repositoryLocationSettings": [
            {
              "repositoryLocationType": "PUBLIC",
              "value": "",
            },
          ],
          "repositoryLocationSettingsErrors": {},
        },
        {
          "setDirtyFlag": [Function],
          "setRepositoryLocationSettings": [Function],
          "setRepositoryLocationSettingsErrors": [Function],
        },
      ]
    }
  />
  <div>
    <ModelRepositoryInstruction />
    <ModelRepositoryLocationList
      formState={
        [
          {
            "dirty": false,
            "repositoryLocationSettings": [
              {
                "repositoryLocationType": "PUBLIC",
                "value": "",
              },
            ],
            "repositoryLocationSettingsErrors": {},
          },
          {
            "setDirtyFlag": [Function],
            "setRepositoryLocationSettings": [Function],
            "setRepositoryLocationSettingsErrors": [Function],
          },
        ]
      }
    />
  </div>
</div>
`;
